[tool.poetry]
name = "galaxy-42"
version = "0.1.0"
description = ""
authors = ["Cameron Andersen <camerontandersen@gmail.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
